[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/TurnController.gd" type="Script" id=1]
[ext_resource path="res://scripts/GlobalObject.gd" type="Script" id=2]
[ext_resource path="res://scripts/EventController.gd" type="Script" id=3]
[ext_resource path="res://resources/game_parameters/main_staging_game.tres" type="Resource" id=4]

[node name="GlobalObject" type="Node"]
script = ExtResource( 2 )
default_params = ExtResource( 4 )

[node name="TurnController" type="Node" parent="."]
script = ExtResource( 1 )

[node name="EventController" type="Node" parent="."]
script = ExtResource( 3 )
